# cathay-log-new

./: .gitignore
backend/: README.md  pyproject.toml
backend/app/: graph.py  main.py  z_draw.ipynb
backend/app/api/web_log/: agent.py  api.py  model.py
backend/app/dspy_modules/: __init__.py  _lm_config.py  general_response.py  intent_checker.py  log_query_extractor.py  web_log_brief_response.py  web_log_detailed_response.py
backend/app/tools/: ipinfo.py  log_tools.py
frontend/: README.md  angular.json  package-lock.json  package.json  proxy.config.json
frontend/src/: styles.scss
frontend/src/app/: api.service.ts  app.component.html  app.component.scss  app.component.ts  app.config.ts
frontend/src/environments/: environment.prod.ts
